# Nion

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.en.md  README.md  build-android.ps1  build-android.sh  deploy.sh  id-optimization-plan.md  tools-redesign-create.md
.cargo/: config.example.toml  config.toml
app/: build.gradle.kts  detekt-config.yml  settings.gradle.kts
app/app/: build.gradle.kts  proguard-rules.pro
app/app/src/character/java/com/echonion/nion/preset/: CharacterPresetProvider.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/assets/: cities.json
app/app/src/main/java/com/echonion/nion/: MainActivity.kt  NionApp.kt
app/app/src/main/java/com/echonion/nion/preset/: CharacterPreset.kt  CharacterPresetInitializer.kt
app/app/src/main/java/com/echonion/nion/reminder/: BatchReminderTriggerReceiver.kt  BatchReminderWorker.kt  BootReceiver.kt  (+25 more)
app/app/src/main/java/uniffi/nion_core/: nion_core.kt
app/app/src/main/res/drawable/: ic_launcher.xml
app/app/src/main/res/values/: strings.xml
app/app/src/main/res/xml/: phone_agent_service_config.xml
backend/: Cargo.toml
backend/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs  nion_core.rs
docs/: agent-api-audit.md  animation-bug-detail-dismiss.md  build-deploy.md  code-audit-report.md  compose-animation-best-practices.md  detekt-p2-report.md  logcat-on-vivo.md  phase0-report.md  pitfalls.md  subtask-drag-design.md  web-search-mvp-plan.md
docs/plans/: reminder-system.md
plan/: today-view.md
tools/: focus-test-data.sh
tools/uniffi-bindgen/: Cargo.toml
(+91 files in other folders)
