[package]
name = "nion-core"
version = "0.7.0"
edition = "2021"
description = "Nion core library - AI companion + task management"

[lib]
name = "nion_core"
crate-type = ["cdylib", "lib"]

[dependencies]
uniffi = "0.31"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
